// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cases/ destructure pattern array pattern in declaration 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "end": {
            "col": 37,
            "index": 36,
            "row": 1,
          },
          "id": {
            "elements": [
              {
                "end": {
                  "col": 13,
                  "index": 12,
                  "row": 1,
                },
                "kind": 10117,
                "name": "state",
                "start": {
                  "col": 8,
                  "index": 7,
                  "row": 1,
                },
              },
              {
                "end": {
                  "col": 23,
                  "index": 22,
                  "row": 1,
                },
                "kind": 10117,
                "name": "setState",
                "start": {
                  "col": 15,
                  "index": 14,
                  "row": 1,
                },
              },
            ],
            "end": {
              "col": 24,
              "index": 23,
              "row": 1,
            },
            "kind": 10182,
            "start": {
              "col": 7,
              "index": 6,
              "row": 1,
            },
          },
          "init": {
            "arguments": [],
            "callee": {
              "end": {
                "col": 35,
                "index": 34,
                "row": 1,
              },
              "kind": 10117,
              "name": "useState",
              "start": {
                "col": 27,
                "index": 26,
                "row": 1,
              },
            },
            "end": {
              "col": 37,
              "index": 36,
              "row": 1,
            },
            "kind": 10170,
            "optional": false,
            "start": {
              "col": 35,
              "index": 34,
              "row": 1,
            },
          },
          "kind": 10140,
          "start": {
            "col": 7,
            "index": 6,
            "row": 1,
          },
        },
      ],
      "end": {
        "col": 37,
        "index": 36,
        "row": 1,
      },
      "kind": 10139,
      "start": {
        "col": 1,
        "index": 0,
        "row": 1,
      },
      "variant": "const",
    },
  ],
  "kind": 10120,
}
`;

exports[`cases/ destructure pattern nested array pattern in declaration 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "end": {
            "col": 94,
            "index": 93,
            "row": 1,
          },
          "id": {
            "elements": [
              {
                "end": {
                  "col": 79,
                  "index": 78,
                  "row": 1,
                },
                "kind": 10180,
                "properties": [
                  {
                    "computed": false,
                    "end": {
                      "col": 13,
                      "index": 12,
                      "row": 1,
                    },
                    "key": {
                      "end": {
                        "col": 13,
                        "index": 12,
                        "row": 1,
                      },
                      "kind": 10117,
                      "name": "key",
                      "start": {
                        "col": 10,
                        "index": 9,
                        "row": 1,
                      },
                    },
                    "kind": 10181,
                    "shorted": true,
                    "start": {
                      "col": 10,
                      "index": 9,
                      "row": 1,
                    },
                    "value": undefined,
                  },
                  {
                    "computed": false,
                    "end": {
                      "col": 20,
                      "index": 19,
                      "row": 1,
                    },
                    "key": {
                      "end": {
                        "col": 20,
                        "index": 19,
                        "row": 1,
                      },
                      "kind": 10117,
                      "name": "value",
                      "start": {
                        "col": 15,
                        "index": 14,
                        "row": 1,
                      },
                    },
                    "kind": 10181,
                    "shorted": true,
                    "start": {
                      "col": 15,
                      "index": 14,
                      "row": 1,
                    },
                    "value": undefined,
                  },
                  {
                    "computed": false,
                    "end": {
                      "col": 47,
                      "index": 46,
                      "row": 1,
                    },
                    "key": {
                      "end": {
                        "col": 26,
                        "index": 25,
                        "row": 1,
                      },
                      "kind": 10117,
                      "name": "data",
                      "start": {
                        "col": 22,
                        "index": 21,
                        "row": 1,
                      },
                    },
                    "kind": 10181,
                    "shorted": false,
                    "start": {
                      "col": 22,
                      "index": 21,
                      "row": 1,
                    },
                    "value": {
                      "end": {
                        "col": 47,
                        "index": 46,
                        "row": 1,
                      },
                      "kind": 10180,
                      "properties": [
                        {
                          "computed": false,
                          "end": {
                            "col": 35,
                            "index": 34,
                            "row": 1,
                          },
                          "key": {
                            "end": {
                              "col": 35,
                              "index": 34,
                              "row": 1,
                            },
                            "kind": 10117,
                            "name": "users",
                            "start": {
                              "col": 30,
                              "index": 29,
                              "row": 1,
                            },
                          },
                          "kind": 10181,
                          "shorted": true,
                          "start": {
                            "col": 30,
                            "index": 29,
                            "row": 1,
                          },
                          "value": undefined,
                        },
                        {
                          "computed": false,
                          "end": {
                            "col": 45,
                            "index": 44,
                            "row": 1,
                          },
                          "key": {
                            "end": {
                              "col": 45,
                              "index": 44,
                              "row": 1,
                            },
                            "kind": 10117,
                            "name": "counters",
                            "start": {
                              "col": 37,
                              "index": 36,
                              "row": 1,
                            },
                          },
                          "kind": 10181,
                          "shorted": true,
                          "start": {
                            "col": 37,
                            "index": 36,
                            "row": 1,
                          },
                          "value": undefined,
                        },
                      ],
                      "start": {
                        "col": 28,
                        "index": 27,
                        "row": 1,
                      },
                    },
                  },
                  {
                    "computed": false,
                    "end": {
                      "col": 78,
                      "index": 77,
                      "row": 1,
                    },
                    "key": {
                      "end": {
                        "col": 54,
                        "index": 53,
                        "row": 1,
                      },
                      "kind": 10117,
                      "name": "names",
                      "start": {
                        "col": 49,
                        "index": 48,
                        "row": 1,
                      },
                    },
                    "kind": 10181,
                    "shorted": false,
                    "start": {
                      "col": 49,
                      "index": 48,
                      "row": 1,
                    },
                    "value": {
                      "elements": [
                        {
                          "end": {
                            "col": 66,
                            "index": 65,
                            "row": 1,
                          },
                          "kind": 10117,
                          "name": "userName1",
                          "start": {
                            "col": 57,
                            "index": 56,
                            "row": 1,
                          },
                        },
                        {
                          "end": {
                            "col": 77,
                            "index": 76,
                            "row": 1,
                          },
                          "kind": 10117,
                          "name": "userName2",
                          "start": {
                            "col": 68,
                            "index": 67,
                            "row": 1,
                          },
                        },
                      ],
                      "end": {
                        "col": 78,
                        "index": 77,
                        "row": 1,
                      },
                      "kind": 10182,
                      "start": {
                        "col": 56,
                        "index": 55,
                        "row": 1,
                      },
                    },
                  },
                ],
                "start": {
                  "col": 9,
                  "index": 8,
                  "row": 1,
                },
              },
            ],
            "end": {
              "col": 81,
              "index": 80,
              "row": 1,
            },
            "kind": 10182,
            "start": {
              "col": 7,
              "index": 6,
              "row": 1,
            },
          },
          "init": {
            "arguments": [],
            "callee": {
              "end": {
                "col": 92,
                "index": 91,
                "row": 1,
              },
              "kind": 10117,
              "name": "useState",
              "start": {
                "col": 84,
                "index": 83,
                "row": 1,
              },
            },
            "end": {
              "col": 94,
              "index": 93,
              "row": 1,
            },
            "kind": 10170,
            "optional": false,
            "start": {
              "col": 92,
              "index": 91,
              "row": 1,
            },
          },
          "kind": 10140,
          "start": {
            "col": 7,
            "index": 6,
            "row": 1,
          },
        },
      ],
      "end": {
        "col": 94,
        "index": 93,
        "row": 1,
      },
      "kind": 10139,
      "start": {
        "col": 1,
        "index": 0,
        "row": 1,
      },
      "variant": "const",
    },
  ],
  "kind": 10120,
}
`;

exports[`cases/ destructure pattern nested object pattern used in declaration 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "end": {
            "col": 20,
            "index": 153,
            "row": 10,
          },
          "id": {
            "end": {
              "col": 1,
              "index": 134,
              "row": 10,
            },
            "kind": 10180,
            "properties": [
              {
                "computed": false,
                "end": {
                  "col": 5,
                  "index": 115,
                  "row": 8,
                },
                "key": {
                  "end": {
                    "col": 9,
                    "index": 17,
                    "row": 2,
                  },
                  "kind": 10117,
                  "name": "props",
                  "start": {
                    "col": 4,
                    "index": 12,
                    "row": 2,
                  },
                },
                "kind": 10181,
                "shorted": false,
                "start": {
                  "col": 4,
                  "index": 12,
                  "row": 2,
                },
                "value": {
                  "end": {
                    "col": 5,
                    "index": 115,
                    "row": 8,
                  },
                  "kind": 10180,
                  "properties": [
                    {
                      "computed": false,
                      "end": {
                        "col": 9,
                        "index": 109,
                        "row": 7,
                      },
                      "key": {
                        "end": {
                          "col": 20,
                          "index": 41,
                          "row": 3,
                        },
                        "kind": 10117,
                        "name": "someProperty",
                        "start": {
                          "col": 8,
                          "index": 29,
                          "row": 3,
                        },
                      },
                      "kind": 10181,
                      "shorted": false,
                      "start": {
                        "col": 8,
                        "index": 29,
                        "row": 3,
                      },
                      "value": {
                        "end": {
                          "col": 9,
                          "index": 109,
                          "row": 7,
                        },
                        "kind": 10180,
                        "properties": [
                          {
                            "computed": false,
                            "end": {
                              "col": 16,
                              "index": 61,
                              "row": 4,
                            },
                            "key": {
                              "end": {
                                "col": 16,
                                "index": 61,
                                "row": 4,
                              },
                              "kind": 10117,
                              "name": "data",
                              "start": {
                                "col": 12,
                                "index": 57,
                                "row": 4,
                              },
                            },
                            "kind": 10181,
                            "shorted": true,
                            "start": {
                              "col": 12,
                              "index": 57,
                              "row": 4,
                            },
                            "value": undefined,
                          },
                          {
                            "computed": false,
                            "end": {
                              "col": 17,
                              "index": 80,
                              "row": 5,
                            },
                            "key": {
                              "end": {
                                "col": 17,
                                "index": 80,
                                "row": 5,
                              },
                              "kind": 10117,
                              "name": "value",
                              "start": {
                                "col": 12,
                                "index": 75,
                                "row": 5,
                              },
                            },
                            "kind": 10181,
                            "shorted": true,
                            "start": {
                              "col": 12,
                              "index": 75,
                              "row": 5,
                            },
                            "value": undefined,
                          },
                          {
                            "computed": false,
                            "end": {
                              "col": 16,
                              "index": 98,
                              "row": 6,
                            },
                            "key": {
                              "end": {
                                "col": 16,
                                "index": 98,
                                "row": 6,
                              },
                              "kind": 10117,
                              "name": "name",
                              "start": {
                                "col": 12,
                                "index": 94,
                                "row": 6,
                              },
                            },
                            "kind": 10181,
                            "shorted": true,
                            "start": {
                              "col": 12,
                              "index": 94,
                              "row": 6,
                            },
                            "value": undefined,
                          },
                        ],
                        "start": {
                          "col": 22,
                          "index": 43,
                          "row": 3,
                        },
                      },
                    },
                  ],
                  "start": {
                    "col": 11,
                    "index": 19,
                    "row": 2,
                  },
                },
              },
              {
                "computed": false,
                "end": {
                  "col": 14,
                  "index": 131,
                  "row": 9,
                },
                "key": {
                  "end": {
                    "col": 14,
                    "index": 131,
                    "row": 9,
                  },
                  "kind": 10117,
                  "name": "otherProps",
                  "start": {
                    "col": 4,
                    "index": 121,
                    "row": 9,
                  },
                },
                "kind": 10181,
                "shorted": true,
                "start": {
                  "col": 4,
                  "index": 121,
                  "row": 9,
                },
                "value": undefined,
              },
            ],
            "start": {
              "col": 7,
              "index": 6,
              "row": 1,
            },
          },
          "init": {
            "end": {
              "col": 20,
              "index": 153,
              "row": 10,
            },
            "kind": 10117,
            "name": "someNestedObject",
            "start": {
              "col": 4,
              "index": 137,
              "row": 10,
            },
          },
          "kind": 10140,
          "start": {
            "col": 7,
            "index": 6,
            "row": 1,
          },
        },
      ],
      "end": {
        "col": 20,
        "index": 153,
        "row": 10,
      },
      "kind": 10139,
      "start": {
        "col": 1,
        "index": 0,
        "row": 1,
      },
      "variant": "const",
    },
  ],
  "kind": 10120,
}
`;

exports[`cases/ destructure pattern object pattern in declaration 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "end": {
            "col": 36,
            "index": 35,
            "row": 1,
          },
          "id": {
            "end": {
              "col": 28,
              "index": 27,
              "row": 1,
            },
            "kind": 10180,
            "properties": [
              {
                "computed": false,
                "end": {
                  "col": 13,
                  "index": 12,
                  "row": 1,
                },
                "key": {
                  "end": {
                    "col": 13,
                    "index": 12,
                    "row": 1,
                  },
                  "kind": 10117,
                  "name": "data",
                  "start": {
                    "col": 9,
                    "index": 8,
                    "row": 1,
                  },
                },
                "kind": 10181,
                "shorted": true,
                "start": {
                  "col": 9,
                  "index": 8,
                  "row": 1,
                },
                "value": undefined,
              },
              {
                "computed": false,
                "end": {
                  "col": 19,
                  "index": 18,
                  "row": 1,
                },
                "key": {
                  "end": {
                    "col": 19,
                    "index": 18,
                    "row": 1,
                  },
                  "kind": 10117,
                  "name": "name",
                  "start": {
                    "col": 15,
                    "index": 14,
                    "row": 1,
                  },
                },
                "kind": 10181,
                "shorted": true,
                "start": {
                  "col": 15,
                  "index": 14,
                  "row": 1,
                },
                "value": undefined,
              },
              {
                "computed": false,
                "end": {
                  "col": 26,
                  "index": 25,
                  "row": 1,
                },
                "key": {
                  "end": {
                    "col": 26,
                    "index": 25,
                    "row": 1,
                  },
                  "kind": 10117,
                  "name": "value",
                  "start": {
                    "col": 21,
                    "index": 20,
                    "row": 1,
                  },
                },
                "kind": 10181,
                "shorted": true,
                "start": {
                  "col": 21,
                  "index": 20,
                  "row": 1,
                },
                "value": undefined,
              },
            ],
            "start": {
              "col": 7,
              "index": 6,
              "row": 1,
            },
          },
          "init": {
            "end": {
              "col": 36,
              "index": 35,
              "row": 1,
            },
            "kind": 10117,
            "name": "state",
            "start": {
              "col": 31,
              "index": 30,
              "row": 1,
            },
          },
          "kind": 10140,
          "start": {
            "col": 7,
            "index": 6,
            "row": 1,
          },
        },
      ],
      "end": {
        "col": 36,
        "index": 35,
        "row": 1,
      },
      "kind": 10139,
      "start": {
        "col": 1,
        "index": 0,
        "row": 1,
      },
      "variant": "const",
    },
  ],
  "kind": 10120,
}
`;
